generated-src/main/java/ssm/SsmNewParser.java
// Generated from ssm/SsmNew.g4 by ANTLR 4.7.1
package com.accelaero.aeroconnect.textprocessor.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SsmNewParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SSM=1, NEW=2, LT=3, UTC=4, EOL=5, XASM=6, SPACE=7, MESSAGE_SEQUENCE_REFERENCE=8, 
		CREATOR_REFERENCE=9, FLIGHT_DESIGNATOR=10, OPERATIONAL_SUFFIX=11, DEI1=12, 
		DEI2=13, DEI3=14, DEI4=15, DEI5=16, DEI9=17;
	public static final int
		RULE_ssmNewMessage = 0, RULE_standardMessageIdentifier = 1, RULE_condition_1 = 2, 
		RULE_timeMode = 3, RULE_condition_1_1 = 4, RULE_messageSequenceReference = 5, 
		RULE_condition_1_1_1 = 6, RULE_creatorReference = 7, RULE_actionIdentifier = 8, 
		RULE_condition_2 = 9, RULE_asmWithdrawalIndicator = 10, RULE_flightDesignator = 11, 
		RULE_operationalSuffix = 12, RULE_condition_3 = 13, RULE_condition_3_1 = 14, 
		RULE_condition_3_1_1 = 15, RULE_jointOperationAirlineDesignatorsDEI1 = 16, 
		RULE_codeSharingCommercialDuplicateDEI2 = 17, RULE_aircraftOwnerDEI3 = 18, 
		RULE_cockpitCrewEmployerDEI4 = 19, RULE_cabinCrewEmployerDEI5 = 20, RULE_codeSharingSharedAirlineDesignationOrWetLeaseAirlineDesignationDEI9 = 21;
	public static final String[] ruleNames = {
		"ssmNewMessage", "standardMessageIdentifier", "condition_1", "timeMode", 
		"condition_1_1", "messageSequenceReference", "condition_1_1_1", "creatorReference", 
		"actionIdentifier", "condition_2", "asmWithdrawalIndicator", "flightDesignator", 
		"operationalSuffix", "condition_3", "condition_3_1", "condition_3_1_1", 
		"jointOperationAirlineDesignatorsDEI1", "codeSharingCommercialDuplicateDEI2", 
		"aircraftOwnerDEI3", "cockpitCrewEmployerDEI4", "cabinCrewEmployerDEI5", 
		"codeSharingSharedAirlineDesignationOrWetLeaseAirlineDesignationDEI9"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'SSM'", "'NEW'", "'LT'", "'UTC'", null, "'XASM'", "' '"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "SSM", "NEW", "LT", "UTC", "EOL", "XASM", "SPACE", "MESSAGE_SEQUENCE_REFERENCE", 
		"CREATOR_REFERENCE", "FLIGHT_DESIGNATOR", "OPERATIONAL_SUFFIX", "DEI1", 
		"DEI2", "DEI3", "DEI4", "DEI5", "DEI9"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SsmNew.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SsmNewParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class SsmNewMessageContext extends ParserRuleContext {
		public StandardMessageIdentifierContext standardMessageIdentifier() {
			return getRuleContext(StandardMessageIdentifierContext.class,0);
		}
		public List<TerminalNode> EOL() { return getTokens(SsmNewParser.EOL); }
		public TerminalNode EOL(int i) {
			return getToken(SsmNewParser.EOL, i);
		}
		public ActionIdentifierContext actionIdentifier() {
			return getRuleContext(ActionIdentifierContext.class,0);
		}
		public Condition_2Context condition_2() {
			return getRuleContext(Condition_2Context.class,0);
		}
		public FlightDesignatorContext flightDesignator() {
			return getRuleContext(FlightDesignatorContext.class,0);
		}
		public Condition_3Context condition_3() {
			return getRuleContext(Condition_3Context.class,0);
		}
		public TerminalNode EOF() { return getToken(SsmNewParser.EOF, 0); }
		public Condition_1Context condition_1() {
			return getRuleContext(Condition_1Context.class,0);
		}
		public SsmNewMessageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ssmNewMessage; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SsmNewListener ) ((SsmNewListener)listener).enterSsmNewMessage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SsmNewListener ) ((SsmNewListener)listener).exitSsmNewMessage(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SsmNewVisitor ) return ((SsmNewVisitor<? extends T>)visitor).visitSsmNewMessage(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SsmNewMessageContext ssmNewMessage() throws RecognitionException {
		SsmNewMessageContext _localctx = new SsmNewMessageContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_ssmNewMessage);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			standardMessageIdentifier();
			setState(45);
			match(EOL);
			setState(47);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(46);
				condition_1();
				}
				break;
			}
			setState(49);
			actionIdentifier();
			setState(50);
			condition_2();
			setState(51);
			match(EOL);
			setState(52);
			flightDesignator();
			setState(53);
			condition_3();
			setState(54);
			match(EOL);
			setState(55);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StandardMessageIdentifierContext extends ParserRuleContext {
		public TerminalNode SSM() { return getToken(SsmNewParser.SSM, 0); }
		public StandardMessageIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_standardMessageIdentifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SsmNewListener ) ((SsmNewListener)listener).enterStandardMessageIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SsmNewListener ) ((SsmNewListener)listener).exitStandardMessageIdentifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SsmNewVisitor ) return ((SsmNewVisitor<? extends T>)visitor).visitStandardMessageIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StandardMessageIdentifierContext standardMessageIdentifier() throws RecognitionException {
		StandardMessageIdentifierContext _localctx = new StandardMessageIdentifierContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_standardMessageIdentifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			match(SSM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Condition_1Context extends ParserRuleContext {
		public TimeModeContext timeMode() {
			return getRuleContext(TimeModeContext.class,0);
		}
		public TerminalNode EOL() { return getToken(SsmNewParser.EOL, 0); }
		public Condition_1_1Context condition_1_1() {
			return getRuleContext(Condition_1_1Context.class,0);
		}
		public Condition_1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition_1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SsmNewListener ) ((SsmNewListener)listener).enterCondition_1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SsmNewListener ) ((SsmNewListener)listener).exitCondition_1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SsmNewVisitor ) return ((SsmNewVisitor<? extends T>)visitor).visitCondition_1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Condition_1Context condition_1() throws RecognitionException {
		Condition_1Context _localctx = new Condition_1Context(_ctx, getState());
		enterRule(_localctx, 4, RULE_condition_1);
		try {
			setState(64);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LT:
			case UTC:
				enterOuterAlt(_localctx, 1);
				{
				setState(59);
				timeMode();
				setState(60);
				match(EOL);
				setState(61);
				condition_1_1();
				}
				break;
			case NEW:
			case MESSAGE_SEQUENCE_REFERENCE:
				enterOuterAlt(_localctx, 2);
				{
				setState(63);
				condition_1_1();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TimeModeContext extends ParserRuleContext {
		public TerminalNode LT() { return getToken(SsmNewParser.LT, 0); }
		public TerminalNode UTC() { return getToken(SsmNewParser.UTC, 0); }
		public TimeModeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_timeMode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SsmNewListener ) ((SsmNewListener)listener).enterTimeMode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SsmNewListener ) ((SsmNewListener)listener).exitTimeMode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SsmNewVisitor ) return ((SsmNewVisitor<? extends T>)visitor).visitTimeMode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TimeModeContext timeMode() throws RecognitionException {
		TimeModeContext _localctx = new TimeModeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_timeMode);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			_la = _input.LA(1);
			if ( !(_la==LT || _la==UTC) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Condition_1_1Context extends ParserRuleContext {
		public MessageSequenceReferenceContext messageSequenceReference() {
			return getRuleContext(MessageSequenceReferenceContext.class,0);
		}
		public Condition_1_1_1Context condition_1_1_1() {
			return getRuleContext(Condition_1_1_1Context.class,0);
		}
		public Condition_1_1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition_1_1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SsmNewListener ) ((SsmNewListener)listener).enterCondition_1_1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SsmNewListener ) ((SsmNewListener)listener).exitCondition_1_1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SsmNewVisitor ) return ((SsmNewVisitor<? extends T>)visitor).visitCondition_1_1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Condition_1_1Context condition_1_1() throws RecognitionException {
		Condition_1_1Context _localctx = new Condition_1_1Context(_ctx, getState());
		enterRule(_localctx, 8, RULE_condition_1_1);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MESSAGE_SEQUENCE_REFERENCE) {
				{
				setState(68);
				messageSequenceReference();
				setState(69);
				condition_1_1_1();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MessageSequenceReferenceContext extends ParserRuleContext {
		public TerminalNode MESSAGE_SEQUENCE_REFERENCE() { return getToken(SsmNewParser.MESSAGE_SEQUENCE_REFERENCE, 0); }
		public MessageSequenceReferenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_messageSequenceReference; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SsmNewListener ) ((SsmNewListener)listener).enterMessageSequenceReference(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SsmNewListener ) ((SsmNewListener)listener).exitMessageSequenceReference(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SsmNewVisitor ) return ((SsmNewVisitor<? extends T>)visitor).visitMessageSequenceReference(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MessageSequenceReferenceContext messageSequenceReference() throws RecognitionException {
		MessageSequenceReferenceContext _localctx = new MessageSequenceReferenceContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_messageSequenceReference);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(MESSAGE_SEQUENCE_REFERENCE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Condition_1_1_1Context extends ParserRuleContext {
		public CreatorReferenceContext creatorReference() {
			return getRuleContext(CreatorReferenceContext.class,0);
		}
		public TerminalNode EOL() { return getToken(SsmNewParser.EOL, 0); }
		public Condition_1_1_1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition_1_1_1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SsmNewListener ) ((SsmNewListener)listener).enterCondition_1_1_1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SsmNewListener ) ((SsmNewListener)listener).exitCondition_1_1_1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SsmNewVisitor ) return ((SsmNewVisitor<? extends T>)visitor).visitCondition_1_1_1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Condition_1_1_1Context condition_1_1_1() throws RecognitionException {
		Condition_1_1_1Context _localctx = new Condition_1_1_1Context(_ctx, getState());
		enterRule(_localctx, 12, RULE_condition_1_1_1);
		try {
			setState(79);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CREATOR_REFERENCE:
				enterOuterAlt(_localctx, 1);
				{
				setState(75);
				creatorReference();
				setState(76);
				match(EOL);
				}
				break;
			case EOL:
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				match(EOL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreatorReferenceContext extends ParserRuleContext {
		public TerminalNode CREATOR_REFERENCE() { return getToken(SsmNewParser.CREATOR_REFERENCE, 0); }
		public CreatorReferenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_creatorReference; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SsmNewListener ) ((SsmNewListener)listener).enterCreatorReference(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SsmNewListener ) ((SsmNewListener)listener).exitCreatorReference(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SsmNewVisitor ) return ((SsmNewVisitor<? extends T>)visitor).visitCreatorReference(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreatorReferenceContext creatorReference() throws RecognitionException {
		CreatorReferenceContext _localctx = new CreatorReferenceContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_creatorReference);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(CREATOR_REFERENCE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActionIdentifierContext extends ParserRuleContext {
		public TerminalNode NEW() { return getToken(SsmNewParser.NEW, 0); }
		public ActionIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actionIdentifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SsmNewListener ) ((SsmNewListener)listener).enterActionIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SsmNewListener ) ((SsmNewListener)listener).exitActionIdentifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SsmNewVisitor ) return ((SsmNewVisitor<? extends T>)visitor).visitActionIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActionIdentifierContext actionIdentifier() throws RecognitionException {
		ActionIdentifierContext _localctx = new ActionIdentifierContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_actionIdentifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(NEW);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Condition_2Context extends ParserRuleContext {
		public TerminalNode SPACE() { return getToken(SsmNewParser.SPACE, 0); }
		public AsmWithdrawalIndicatorContext asmWithdrawalIndicator() {
			return getRuleContext(AsmWithdrawalIndicatorContext.class,0);
		}
		public Condition_2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition_2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SsmNewListener ) ((SsmNewListener)listener).enterCondition_2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SsmNewListener ) ((SsmNewListener)listener).exitCondition_2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SsmNewVisitor ) return ((SsmNewVisitor<? extends T>)visitor).visitCondition_2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Condition_2Context condition_2() throws RecognitionException {
		Condition_2Context _localctx = new Condition_2Context(_ctx, getState());
		enterRule(_localctx, 18, RULE_condition_2);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SPACE) {
				{
				setState(85);
				match(SPACE);
				setState(86);
				asmWithdrawalIndicator();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsmWithdrawalIndicatorContext extends ParserRuleContext {
		public TerminalNode XASM() { return getToken(SsmNewParser.XASM, 0); }
		public AsmWithdrawalIndicatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asmWithdrawalIndicator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SsmNewListener ) ((SsmNewListener)listener).enterAsmWithdrawalIndicator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SsmNewListener ) ((SsmNewListener)listener).exitAsmWithdrawalIndicator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SsmNewVisitor ) return ((SsmNewVisitor<? extends T>)visitor).visitAsmWithdrawalIndicator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AsmWithdrawalIndicatorContext asmWithdrawalIndicator() throws RecognitionException {
		AsmWithdrawalIndicatorContext _localctx = new AsmWithdrawalIndicatorContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_asmWithdrawalIndicator);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(XASM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FlightDesignatorContext extends ParserRuleContext {
		public TerminalNode FLIGHT_DESIGNATOR() { return getToken(SsmNewParser.FLIGHT_DESIGNATOR, 0); }
		public FlightDesignatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_flightDesignator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SsmNewListener ) ((SsmNewListener)listener).enterFlightDesignator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SsmNewListener ) ((SsmNewListener)listener).exitFlightDesignator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SsmNewVisitor ) return ((SsmNewVisitor<? extends T>)visitor).visitFlightDesignator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FlightDesignatorContext flightDesignator() throws RecognitionException {
		FlightDesignatorContext _localctx = new FlightDesignatorContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_flightDesignator);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(FLIGHT_DESIGNATOR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperationalSuffixContext extends ParserRuleContext {
		public TerminalNode OPERATIONAL_SUFFIX() { return getToken(SsmNewParser.OPERATIONAL_SUFFIX, 0); }
		public OperationalSuffixContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operationalSuffix; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SsmNewListener ) ((SsmNewListener)listener).enterOperationalSuffix(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SsmNewListener ) ((SsmNewListener)listener).exitOperationalSuffix(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SsmNewVisitor ) return ((SsmNewVisitor<? extends T>)visitor).visitOperationalSuffix(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperationalSuffixContext operationalSuffix() throws RecognitionException {
		OperationalSuffixContext _localctx = new OperationalSuffixContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_operationalSuffix);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(OPERATIONAL_SUFFIX);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Condition_3Context extends ParserRuleContext {
		public Condition_3_1Context condition_3_1() {
			return getRuleContext(Condition_3_1Context.class,0);
		}
		public OperationalSuffixContext operationalSuffix() {
			return getRuleContext(OperationalSuffixContext.class,0);
		}
		public Condition_3Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition_3; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SsmNewListener ) ((SsmNewListener)listener).enterCondition_3(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SsmNewListener ) ((SsmNewListener)listener).exitCondition_3(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SsmNewVisitor ) return ((SsmNewVisitor<? extends T>)visitor).visitCondition_3(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Condition_3Context condition_3() throws RecognitionException {
		Condition_3Context _localctx = new Condition_3Context(_ctx, getState());
		enterRule(_localctx, 26, RULE_condition_3);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OPERATIONAL_SUFFIX) {
				{
				setState(95);
				operationalSuffix();
				}
			}

			setState(98);
			condition_3_1();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
